# task_orchestrator_cli

./: # .gitignore  # ensure_pk_system_enabled.py  .dockerignore  .gitignore  .gitmodules  GEMINI.md  README.md  README_ENGLISH.md  README_KOREAN.md  container_build_test_wrapper.py  copy_to_auto_utility.bat  copy_to_auto_utility.py  d_working_via_ensure_video_loaded_at_losslesscut_v5  debug_aliases.ps1  dictionary.md  docker-compose.yaml  ensure_pk_system_enabled_windows.ps1  ensure_task_orchestrator_cli_pushed_to_github.bat  etcsshsshd_config  fix_cmd_autorun_issue.ps1  fix_uv_permission_issue.py  fix_windows_aliases.bat  fix_windows_aliases.ps1  pk_push_project_to_github.bat  pk_push_project_to_github.py  pk_push_project_to_github.sh  pk_push_project_to_github_hybrid.bat  pk_push_project_to_github_hybrid.py  pk_push_project_to_github_light.bat  pk_push_project_to_github_light.py  pk_test_tests.cmd  pk_test_tests.ps1  pk_test_tests.py  pk_test_tests.sh  practice.Dockerfile  practice_uv_system.md  project_config.toml  project_fastapi.Dockerfile  pyproject.toml  register_aliases_in_cmd.bat  (+11 more)
business_documents/: 10.BUSINESS_PROPOSAL_DRAFT_v1.0.md  15.BUSINESS_PROPOSAL.md  20.ARCHITECTURE.md
docs/: # README.md  README.md  README_ENGLISH.md  README_KOREAN.md  alias_migration_summary.md  fzf_optimization_guide.md  hotkey_monitor_guide.md
fix/: TROUBLESHOOTING_GUIDE.md
monitors/: ensure_service_monitored.sh
pk_prompts/: chatting_room_by_auto_prompts.md  chatting_room_by_auto_prompts_from_chatGPT_for_msa_services.md  chatting_room_by_auto_prompts_from_cursor_for_msa_services.md  chatting_room_by_manual_prompts_for_msa_services.md
pk_system_resources/: docker-compose-matter.yml
pk_system_sources/: 강의용도구.py
pkg_3d_modeling/: pk camera clibration mount design.blend
pkg_bashrc/: .bashrc.bak  .bashrc.bak.20250519_010654  .bashrc.bak.20250520_002814  .bashrc.bak.20250520_002911  .bashrc.bak.20250520_003929  .bashrc.bak.20250520_005901  .bashrc.bak.20250520_010844  .bashrc.bak.20250520_011305  .bashrc.bak.20250520_011805  .bashrc.bak.20250520_012254  .bashrc.bak.20250520_012514  .bashrc.bak.20250520_012653  .bashrc.bak.20250520_013847  .bashrc.bak.20250520_013959
pkg_finance_invest_assist/: README.md  env.example
pkg_jq/: READ_ME.md
pkg_linux/: ensure_bashrc_backuped.sh  ensure_btop_enabled.sh  ensure_fzf_customized.sh  ensure_fzf_enabled.sh  ensure_git_ignore_fix.sh  ensure_git_node_modules_fix.sh  ensure_helix_enabled.sh  ensure_korean_typing.sh  ensure_pk_system_enabled.sh  ensure_tmux_config_backuped.sh  ensure_tmux_enabled.sh  ensure_uv_enabled.sh  ensure_uv_enabled_for_ubuntu_20_04.sh  ensure_uv_enabled_for_ubuntu_20_04_v1.sh  ensure_uv_enabled_for_windows_v1.sh  ensure_uv_synced.sh  ensure_xclip_enabled.sh  ensure_zsh_customized.sh  ensure_zshrc_backuped.sh  fzf  pk_alias.sh
pkg_md/: # sample console_blurred README.md
pkg_py/: # pk_ensure_cmd_exe_deduplicated_once.py  # pk_ensure_memo_contents_found.py  # pk_ensure_memo_editable.py  # pk_ensure_smart_person_ai_builded_via_python_command.py  TBD.py  TBD_jarvis_components.py  TBD_pk_ensure_pk_system_lighten.py  TBD_test_fin_service_container_build.py  TBD_test_fin_service_container_build_wsl.py  TBD_test_smart_person_ai_container_build.py  TBD_test_smart_person_ai_container_build_wsl.py  TBD_threading.py  TBD_voice_to_file_agent.py  TBD_vpn.py  __init__.py  a2z_assist_to_analize_addup_issue.py  a2z_assist_to_perform_to_ensure_vpc_condition.py  a2z_ensure_nx_flash_image_installed.py  a2z_open_a2z_nas_2_40_via_explorer.py  collect_magnet_set_from_nyaa_si_p1.py  destory d without overwrite(todo 이건 파이썬으로 재구현).cmd  ensure_db_container.py.py  ensure_f_list_organized_by_x.py  is_in_venv.py  (+291 more)
project_cmake/: CMakeLists.txt
project_cmake/src/: core.cpp  core.h  main.cpp
services/hospital_workers/: .gitmodules  README.md  docker-compose.yml  pyproject.toml
services/hospital_workers/api_server/: Dockerfile
services/hospital_workers/api_server/src/: Dockerfile.dev  Dockerfile.prod  main.py  pyproject.toml
services/hospital_workers/db_server/: Dockerfile  docker-compose.yml
services/hospital_workers/docs/: 20.ARCHITECTURE.md
services/hospital_workers/monitors/: ensure_service_monitored.sh
services/hospital_workers/page_server/: Dockerfile.dev  Dockerfile.prod  README.md  index.html  next.config.js  package.json  tsconfig.json  vite.config.js
services/hospital_workers/page_server/app/: layout.tsx  page.tsx
services/hospital_workers/page_server/app/heal_base_hospital_worker/v1/page/ensure/login/: page.tsx
services/hospital_workers/page_server/app/heal_base_hospital_worker/v1/page/ensure/signup/: page.tsx
services/hospital_workers/page_server/nginx/: nginx.conf  nginx.dev.conf  nginx.prod.conf
services/hospital_workers/prompts/: README.md  ensure_git_submodule_pushed.py  prompt_templates_for_human.md  prompts_for_human.md
services/hospital_workers/prompts/chatting_room_with_ai/: chatting_room_with_ai.md
services/hospital_workers/scripts/: ensure_api_test.py  ensure_containers_build.sh  ensure_containers_compose_install.sh  ensure_containers_install.sh  ensure_containers_run.sh  ensure_containers_stop.sh  ensure_service_operated.sh  ensure_service_shutdowned.sh  ensure_service_test.sh  ensure_services_operated.sh
services/hospital_workers/servers/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
services/hospital_workers/servers/api_server/: Dockerfile  pyproject.toml
services/hospital_workers/servers/api_server/src/: Dockerfile  Dockerfile.dev  database.py  main.py  models.py
services/hospital_workers/servers/db_server/migrations/: 01-init.sql
services/hospital_workers/servers/page_server/: Dockerfile.dev  package-lock.json  package.json
services/hospital_workers/servers/page_server/nginx/: nginx.conf
services/hospital_workers/servers/page_server/src/app/: page.tsx
services/hospital_workers/shared/: README.md
services/hospital_workers/tests/: test_login_routine_via_selenium_at_windows.py  test_login_routine_via_selenium_at_windows_backup.py  test_services_running.py
(+4239 files in other folders)
