[project]
name = "business_with_ai"
version = "0.1.0"
description = "Hospital Workers Management System with AI"
requires-python = ">=3.8"
dependencies = [
    "selenium",
    "webdriver-manager",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
